# CW-Repeated-Calls

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile-customer-mcp-server  Dockerfile-mcp-server  Dockerfile-operations-mcp-server  Dockerfile-webapp  README.md  chat_history_repeated_call.json  create_incomingcalls_app.py  create_scenario.py  example.env  kloten.py  pyproject.toml  requirements.txt
data/: call_event.csv  customer.csv  customers.csv  docker-pgadmin.ps1  historic_call_event.csv  product.csv  products.csv  software_update.csv  subscription.csv  subscriptions.csv
data/scenarios/: scenario_generation_guide.md  scenario_specifications.json  scenario_specifications_test.json
dotnet-samples/: .editorconfig  Program.cs  appsettings.development.json  appsettings.json  cw-repeated-calls-dotnet.csproj  cw-repeated-calls-dotnet.sln
dotnet-samples/Agents/: CustomerDataAgent.cs  OperationsAgent.cs
dotnet-samples/Data/: callevent.csv  customer.csv  discount.csv  historiccallevent.csv  softwareupdate.csv
evaluations/: .env.example  README.md  evaluator-samples.py  pyproject.toml
evaluations/datasets/: 4o-mini_conversations_RepeatedCallDetector.jsonl  4o_conversations_RepeatedCallDetector.jsonl  _archived_test_cases.json  conversation_example.jsonl  conversations_RepeatedCallDetector.jsonl  conversations_repeated_call.jsonl  example.csv  scenarios.jsonl  single_turn_example.jsonl
evaluations/results/: eval_conversations_RepeatedCallDetector_gpt-4o_20250521_183719.json  eval_conversations_repeated_call_gpt-4o_20250521_114637.json  eval_conversations_repeated_call_gpt-4o_20250521_163808.json  eval_example_Phi-4_20250519_142635.json  eval_example_gpt-4o-mini_20250519_142625.json  eval_example_gpt-4o_20250519_142610.json
evaluations/scripts/: 0_evaluator_samples.py  1_local_evaluation.py  1_local_evaluation_foundry.py  1_local_evaluation_hub.py  2_continuous_evaluations.py
frontend/: receive_page.py  send_page.py  test_receive_data.py  test_send_data.py  utils.py  webapp.py
infra/: main.bicep
repeated_calls_mvp_sample/: .env.example  README.md  main.py  pyproject.toml
webapp/: Send.py  create_scenario.py  dummy_receiving_data.py  kloten.py  receive_messages.py  receive_webapp.py  sent_webapp.py  test.py  test_receive_data.py  utils.py
workflow/: README.md  app.py  requirements.txt  run.ps1
(+203 files in other folders)
