[tool.poetry]
name = "repeated-calls"
version = "0.1.0"
description = "Python environment for the Repeated Calls CodeWith project."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
