[tool.poetry]
name = "repeated-calls"
version = "0.1.0"
description = "Python environment for the Repeated Calls CodeWith project."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
azure-identity = "^1.22.0"
semantic-kernel = "1.29.0"
sqlalchemy = "^2.0.40"
psycopg = "^3.2.7"
psycopg-binary = "^3.2.7"
psycopg-pool = "^3.2.6"
pandas = "2.2.3"
uvicorn = "^0.34.2"
mcp = "^1.8.1"
python-dotenv = "^1.1.0"
mcp-client = "^0.2.0"
jinja2 = "3.1.6"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
close-quotes-on-newline = true
